--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/oidc": "^3.1.0",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
